[gd_scene load_steps=8 format=3 uid="uid://uog53iqxp4f3"]

[ext_resource type="Script" path="res://UI/menu.gd" id="1_wiy88"]
[ext_resource type="PackedScene" uid="uid://0jha4ipd1n12" path="res://UI/char_blockV2.tscn" id="2_qdf42"]

[sub_resource type="Animation" id="Animation_uour8"]
resource_name = "Menu"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(317, 325)]
}

[sub_resource type="Animation" id="Animation_nvhyi"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Main/Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(317, 325)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q6gix"]
_data = {
"Menu": SubResource("Animation_uour8"),
"RESET": SubResource("Animation_nvhyi")
}

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_3i5o8"]
states/Start/position = Vector2(203, 100)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_o1fnw"]
properties/0/path = NodePath("select/HBoxContainer:alignment")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 1

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wiy88")
container = ExtResource("2_qdf42")
metadata/_edit_lock_ = true

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6gix")
}
tree_root = SubResource("AnimationNodeStateMachine_3i5o8")
anim_player = NodePath("../AnimationPlayer")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q6gix")
}

[node name="select" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1279.0
offset_top = -2.0
offset_right = 1279.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="select"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="select"]
layout_mode = 0
offset_left = 654.0
offset_top = 644.0
offset_right = 760.0
offset_bottom = 675.0
text = "START GAME"

[node name="OptionButton" type="OptionButton" parent="select"]
layout_mode = 0
offset_left = 654.0
offset_top = 680.0
offset_right = 785.0
offset_bottom = 711.0
item_count = 1
selected = 0
popup/item_0/text = "select level"
popup/item_0/id = 0

[node name="Main" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Main"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 77.0
offset_top = 53.0
offset_right = 77.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.982397, 1.1355)

[node name="Host" type="Button" parent="Main/Control"]
layout_mode = 0
offset_left = 34.6092
offset_top = 189.344
offset_right = 80.6092
offset_bottom = 220.344
scale = Vector2(6.34402, 2.9015)
text = "Host"

[node name="Join" type="Button" parent="Main/Control"]
layout_mode = 0
offset_left = 362.379
offset_top = 189.344
offset_right = 408.379
offset_bottom = 220.344
scale = Vector2(6.82762, 3.12268)
text = "Join
"

[node name="PortForward" type="Button" parent="Main/Control"]
layout_mode = 0
offset_left = 362.379
offset_top = 189.344
offset_right = 408.379
offset_bottom = 220.344
scale = Vector2(6.82762, 3.12268)
text = "PortForward(if you can)
"

[node name="Start" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 753.0
offset_bottom = 753.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="Button" type="Button" parent="Start"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -99.42
offset_top = -98.0
offset_right = 103.58
offset_bottom = -67.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(105.42, 17)
text = "Press Any Button to Start"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_o1fnw")

[connection signal="pressed" from="select/Button" to="." method="_start_game"]
[connection signal="item_selected" from="select/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="Main/Control/Host" to="." method="set_character" binds= ["host"]]
